# quack-norris

./: .continuerules  .gitignore  .gitmodules  README.md  index.html  pyproject.toml  start.ps1
.github/workflows/: python-package.yml
assets/: index-C7Dfzg47.js  index-X2ZEGhW-.js  index-liabo7e2.js
chat-ui/: index.html  package-lock.json  package.json  tsconfig.json
chat-ui/src/: icons.ts  main.ts
docs/: PLAN-agent-registry.md  PLAN-skills-for-simple-agent.md
quack_norris/: __main__.py  __ui_without_terminal__.py  config.py  logging.py  main.py  micro_graph.py
quack_norris/agent/: auto.md  main.py  planner.md  systemic_consultant.md
quack_norris/agents/: __init__.py  __main__.py  agent.py  agent_chat_handler.py  agent_definition.py  agent_registry.py  agent_runner.py  auto.agent.md  feedback.agent.md  mcps.json  multi_agent_runner.py  planner.agent.md  skill_registry.py  songwriter.agent.md  systemic_consultant.agent.md
quack_norris/api/: chat_handler.py  cli.py  server.py
quack_norris/common/: _types.py  config.py  llm_provider.py  quack_norris.py
quack_norris/configs/: config.json
quack_norris/core/: __init__.py  _prompts.py  agent.py  llm.py  mcp_client.py  output_writer.py  prompts.py  state.py
quack_norris/mcp/: __init__.py  client.py
quack_norris/server/: api_server.py  llm_provider.py  router.py  user.py
quack_norris/servers/: __init__.py  llm_proxy.py  openai_server.py  proxy_chat_handler.py
quack_norris/ui/: app.py  (+1 more)
quack_ui/: package-lock.json  package.json  vite.config.js
src/: main.ts
tests/: run_tests.bat  test_api_server.py
(+80 files in other folders)
