[project]
name = "quack-norris"
version = "0.3.1"
license = "MIT"
readme = "README.md"
description = "An AI agent that can code and work with knowledge for you."
keywords = ["ai"]
authors = [{ name = "Michael Fuerst" }]
maintainers = [
    { name = "Michael Fuerst" },
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.6",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "fastapi>=0.116.1",
    "uvicorn>=0.34.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "pre-commit>=4.2.0",
]

[project.scripts]
quack-norris = "quack_norris.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
